--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,14 @@
 __pycache__/
 *.pyc
-*.pyo
-*.pyd
-.myenv
-.git
+*.pkl
+*.pt
+*.h5
+*.zip
+*.tar
+*.gz
+.env
+venv/
+myenv/
+.DS_Store
+.idea/
+*.log
