--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,6 @@ flask==3.1.1
 ultralytics==8.3.134
 opencv-python-headless==4.11.0.86
 numpy==2.2.5
-torch==2.7.0
-torchvision==0.22.0
+torch==2.7.0+cpu
+torchvision==0.22.0+cpu
+--extra-index-url https://download.pytorch.org/whl/cpu
