--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-myflask==3.1.1
+--extra-index-url https://download.pytorch.org/whl/cpu
+
+Flask==2.3.3
 ultralytics==8.3.134
 opencv-python-headless==4.11.0.86
-numpy==2.2.5
-torch==2.7.0+cpu
-torchvision==0.22.0+cpu
---extra-index-url https://download.pytorch.org/whl/cpu
+numpy==1.26.4
+torch==2.2.0+cpu
+torchvision==0.17.0+cpu
